test_regress/t/t_var_suggest_bad.out
%Error: t/t_var_suggest_bad.v:14:9: Can't find definition of variable: 'foobat'
                                  : ... Suggested alternative: 'foobar'
   14 |     if (foobat) $stop;
      |         ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_var_suggest_bad.v:15:5: Can't find definition of task/function: 'boobat'
                                  : ... Suggested alternative: 'boobar'
   15 |     boobat;
      |     ^~~~~~
%Error: Exiting due to
